--- a/dx.html
+++ b/dx.html
@@ -803,7 +803,7 @@ function noticeOrder(s) {
 
 
          var gg_sub = "<sub>" + an + ', ' + bn + "</sub>";
-         gg_sub = gg_sub.fontsize(3.5e);
+         gg_sub = gg_sub.fontsize(3.5);
          var text = 'GG' + gg_sub + '(' + formatter.format(Math.floor(ar*100)/100) + ', ' + formatter.format(Math.floor(br*100)/100) + ')';
          updateValue("labelcontainer1", text);
          box.style.display = "flex";
