update parameter label stying

--- a/dx.html
+++ b/dx.html
@@ -1319,17 +1319,17 @@ var cr = [[], [], [], [],
       }
 
       .label_container {
-        width: 200px;
-        height: 60px;
+        width: 180px;
+        height: 50px;
         background-color: #000000;
         color: #fff;
         position: fixed;
         bottom: 8px;
         left: 8px;
-        border-radius: 20px;
+        border-radius: 25px;
         opacity: 1;
         transition: opacity 0.8s;
-        display:flex;
+        display:none;
         font-size: 20px;
         justify-content: center;
         align-items: center;
