Fix recolor.  Eric and I are fighting over color, but somehow his change caused my recolor to not work anymore, so I am patching that back in.

--- a/dx.html
+++ b/dx.html
@@ -1392,7 +1392,7 @@ var cr = [[], [], [], [],
 		<ul>
 		  <li onclick="activate_hamburger_menu(), activate_button_container(), activate_label_container(), downloadimage()">Download image</li>
 		  <li onclick="activate_hamburger_menu(), activate_button_container(), activate_label_container(), criticalsnap()">Snap to critical radius</li>
-		  <li onclick="activate_hamburger_menu(), activate_button_container(), activate_label_container(), recolor(true)">Change color style</li>
+		  <li onclick="activate_hamburger_menu(), activate_button_container(), activate_label_container(), recolor(false)">Change color style</li>
 		  <li onclick="activate_hamburger_menu(), activate_button_container(), activate_label_container(), doanim()">Email image (tbd)</li>
 <!-- <li onclick="toggle_scale(), activate_hamburger_menu(), activate_button_container() ,doanim()">Toggle hires scale</li> -->
 		  <li onclick="toggle_pttype(), activate_hamburger_menu(), activate_button_container(), activate_label_container(), doanim()">Toggle point style</li>
