--- a/dx.html
+++ b/dx.html
@@ -28,6 +28,7 @@ var pttype = 1 ;
 /*
  *   Internal rendering parameters.
  */
+var hilop = 0;
 var canvas, ctx;
 var deepest = 0;
 var renderlim = 300;
@@ -163,6 +164,7 @@ function doanim(typ) {
     drawcirc(ctx, bx, by, br * sc);
     deepest = 0;
     renderlim = 300;
+    hilop = 0;
     curthink = 1000 * 60 ;
     state = 0;
     setmax = false;
@@ -334,7 +336,12 @@ function doworkfull() {
                       y = 0 ;
                       firstpts++ ;
                    }
+                   var off = y0 * intwidth32 + x0;
+                   if ((rbm[off>>5] >> (off&31)) & 1) {
+                      continue ;
+                   }
                    if (Math.hypot(x, y) >= ar && Math.hypot(x-sep, y) >= br) {
+                      rbm[off>>5] |= 1<<(off&31);
                       continue ;
                    }
                 } else if (pttype == 2) {
@@ -346,23 +353,8 @@ function doworkfull() {
                       y = (br - 2 * eps) * Math.sin(x) ;
                       x = sep + (br - 2 * eps) * Math.cos(x) ;
                    }
-                } else {
-                   x = sep / 2 ;
-                   y = 0 ;
                 }
-                if (pttype == 2) {
-                   break ;
-                } else {
-                   var tx = (x * sc + ax) | 0;
-                   var ty = (y * sc + ay) | 0;
-                   if (tx >= 0 && tx < width && ty >= 0 && ty < width) {
-                      var off = ty * intwidth32 + tx ;
-                      var w = rbm[off>>5] ;
-                      if (0 == ((w >> (off & 31)) & 1)) {
-                         break ;
-                      }
-                   }
-                }
+                break ;
             }
             x -= sep / 2 ;
             ord = 0;
@@ -583,7 +575,12 @@ function doworkgen() {
                       y = 0 ;
                       firstpts++ ;
                    }
+                   var off = y0 * intwidth32 + x0;
+                   if ((rbm[off>>5] >> (off&31)) & 1) {
+                      continue ;
+                   } 
                    if (Math.hypot(x, y) >= ar && Math.hypot(x-sep, y) >= br) {
+                      rbm[off>>5] |= 1<<(off&31);
                       continue ;
                    }
                 } else if (pttype == 2) {
@@ -665,8 +662,8 @@ function doworkgen() {
                    deepest = renderlim;
                    noticeOrder(">" + deepest);
                    renderlim = Math.floor(renderlim * 1.2);
-                   if (renderlim > jumbledev) {
-                      renderlim = jumbledev ;
+                   if (renderlim > jumblelev) {
+                      renderlim = jumblelev ;
                    }
                } else {
                   if (! setmax) {
