--- a/dx.html
+++ b/dx.html
@@ -1029,28 +1029,26 @@ function noticeOrder(s) {
          }
       } ;
 
-      function check_touch_target(touch_in){
-         if (touch_in == document.getElementById('range1')){return false;}
-         if (touch_in == document.getElementById('range2')){return false;}
-         if (touch_in == document.getElementById('range3')){return false;}
-         if (touch_in == document.getElementById('range4')){return false;}
-         if (touch_in == document.getElementById('range6')){return false;}
-         if (touch_in == document.getElementById('range5')){return false;}
-         if (touch_in == document.getElementById('color1')){return false;}
-         if (touch_in == document.getElementById('color2')){return false;}
-         if (touch_in == document.getElementById('color3')){return false;}
+      function check_touch_target(target_in){
+         // if (target_in == document.getElementById('range1')){return false;}
+         // if (target_in == document.getElementById('range2')){return false;}
+         // if (target_in == document.getElementById('range3')){return false;}
+         // if (target_in == document.getElementById('range4')){return false;}
+         // if (target_in == document.getElementById('range5')){return false;}
+         // if (target_in == document.getElementById('range6')){return false;}
 
 
-         if (touch_in == document.getElementById('kebab')){return false;}
+         // if (target_in == document.getElementById('kebab')){return false;}
 
-         if (touch_in == document.getElementById('button1')){return false;}
-         if (touch_in == document.getElementById('button2')){return false;}
-         if (touch_in == document.getElementById('button3')){return false;}
-         if (touch_in == document.getElementById('button4')){return false;}
-         if (touch_in == document.getElementById('button6')){return false;}
-         if (touch_in == document.getElementById('button5')){return false;}
+         // if (target_in == document.getElementById('button1')){return false;}
+         // if (target_in == document.getElementById('button2')){return false;}
+         // if (target_in == document.getElementById('button3')){return false;}
+         // if (target_in == document.getElementById('button4')){return false;}
+         // if (target_in == document.getElementById('button5')){return false;}
+         // if (target_in == document.getElementById('button6')){return false;}
+         // if (target_in == document.getElementById('button7')){return false;}
 
-         if (touch_in == document.getElementById('button_container1')){return false;}
+         // if (target_in == document.getElementById('button_container1')){return false;}
 
          return true;
       }
@@ -1064,25 +1062,25 @@ function noticeOrder(s) {
       /* touch controls for mobile*/
       var isDragging = false;
       var ispinching = false;
-      var touchStartX, touchStartY, initialx, initialy, initialdist, initialzoom;
+      var touchStartX, touchStartY, initialx, initialy, initialdist, initialzoom, clickx, clicky;
 
       document.addEventListener('touchstart', function(e) {
+         e.preventDefault();
          if (e.touches.length == 1){
             if (check_touch_target(e.target)){
-               e.preventDefault();
                isDragging = true;
                touchStartX = e.touches[0].clientX;
                touchStartY = e.touches[0].clientY;
                initialx = xoff;
                initialy = yoff;
             }
-            activate_ui();
          }
          if (e.touches.length == 2){
             initialzoom = zoom;
             initialdist = get_touch_dist(e.touches[0], e.touches[1]);
             ispinching = true;
          }
+         activate_ui();
       });
 
       document.addEventListener('touchend', function(e) {
@@ -1101,47 +1099,31 @@ function noticeOrder(s) {
           doanim(ispinching ? 0 : 1);
         }
 
-        if (ispinching === true) {
-          e.preventDefault();
-          var newdist = get_touch_dist(e.touches[0], e.touches[1]);
-          var scale = newdist/initialdist;
-          zoom = initialzoom*scale;
+         if (ispinching === true) {
+            e.preventDefault();
+            var newdist = get_touch_dist(e.touches[0], e.touches[1]);
+            var scale = newdist/initialdist;
+            zoom = initialzoom*scale;
 
 
-          if (zoom > 20) {
-               zoom = 20 ;
-            }
-            if (zoom < 0.5) {
-               zoom = 0.5 ;
-            }
-
-          doanim();
-        }
+            if (zoom > 20) {zoom = 20;}
+            if (zoom < 0.5) { zoom = 0.5 ;}
+            doanim();
+         }
         activate_ui();
       });
 
-      document.addEventListener('touchmove', function (event) {
-   if (event.scale !== 1) { event.preventDefault(); }
-}, false);
-
       /* pan control for desktop*/
       document.addEventListener('mousedown', function(e) {
-         keb = document.getElementById('kebab');
-         if (e.target == keb){
-            activate_hamburger_menu();
+         e.preventDefault();
+         if (check_touch_target(e.target)){
+            isDragging = true;
+            touchStartX = e.clientX;
+            touchStartY = e.clientY;
+            initialx = xoff;
+            initialy = yoff;
          }
-         else{
-            if (check_touch_target(e.target)){
-               activate_ui();
-               e.preventDefault();
-               isDragging = true;
-               touchStartX = e.clientX;
-               touchStartY = e.clientY;
-               initialx = xoff;
-               initialy = yoff;
-            }
-         }
-         
+         activate_ui();
       });
 
       document.addEventListener('mouseup', function(e) {
@@ -1157,9 +1139,9 @@ function noticeOrder(s) {
 
           xoff = touchX/zoom + initialx;
           yoff = touchY/zoom + initialy;
-          doanim(1);
-         }
-         activate_ui();
+          doanim(ispinching ? 0 : 1);
+        }
+        activate_ui();
       });
 
       window.onload = start;
@@ -1237,7 +1219,7 @@ var cr = [[], [], [], [],
 
  function update_rot_label(){
    if (dofull){
-      updateValue('labelcontainer2', 'Full cs group')
+      updateValue('labelcontainer2', 'Full C.S. Group')
    }
    else{
       updateValue('labelcontainer2', "gen = a b'")
@@ -1464,7 +1446,7 @@ var cr = [[], [], [], [],
     </datalist>
 
     <div class="label_container" id="labelcontainer1"></div>
-    <div class="label_container" id="labelcontainer2" style="bottom: 87px;">full generator</div>
+    <div class="label_container" id="labelcontainer2" style="bottom: 87px;">Full C.S. Group</div>
 
 
     <div class="button-container" id="button_container1">
@@ -1554,7 +1536,7 @@ var cr = [[], [], [], [],
           list="steplist"
         />
       </div>
-      <button class="button" id="button6" onclick="dorandom()">&#127922<sub> </sub></button>
+      <button class="button" id="button7" onclick="dorandom()">&#127922<sub> </sub></button>
 
     </div>
     <a href="" id="downloadlink" style="display: none;"></a>
