remove pinching check from mouse events

--- a/dx.html
+++ b/dx.html
@@ -1139,7 +1139,7 @@ function noticeOrder(s) {
 
           xoff = touchX/zoom + initialx;
           yoff = touchY/zoom + initialy;
-          doanim(ispinching ? 0 : 1);
+          doanim(1);
         }
         activate_ui();
       });
